package iphone_projeto.interfaces;

public interface ReprodutorMusical {

	public void tocar();
	
	public void pausar();
	
	public void selecionarMusica(String musica);
}
